syntax = "proto3";

package server;
option go_package = "server/proto;proto";

service TokenService {
    // Метод сохранения с поддержкой club_id
    rpc Save (SaveRequest) returns (SaveResponse);
    rpc CheckMultiple (CheckMultipleRequest) returns (CheckMultipleResponse);
}

message SaveRequest {
    string id = 1;             // Идентификатор пользователя
    string club_id = 2;        // Идентификатор клуба
}

message SaveResponse {
    string message = 1;
}

message CheckMultipleRequest {
    repeated string ids = 1;   // Список идентификаторов пользователей
    string club_id = 2;        // Идентификатор клуба для проверки
}

message CheckMultipleResponse {
    int32 count = 1;           // Количество совпадений в базе
}

message ClearRequest{
    string club_id = 1;
}
message ClearResponse{
    string message = 1;
}
